feat(商城): 升级spring boot3.2